--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-google-cloud-datastore==1.4.0
-google-cloud-vision==0.30.0
-psycopg2==2.7.3
-python-dotenv==0.7.1
-python-telegram-bot==9.0.0
-requests==2.18.4
-slackclient==1.1.0
-textblob==0.14.0
+google-cloud-datastore>=1.9.0
+google-cloud-vision>=0.38.0
+inflect>=2.1.0
+logbook>=1.4.3
+python-dotenv>=0.10.3
+python-telegram-bot==12.0.0b1
+requests>=2.22.0
+slackclient>=2.0.1
+textblob>=0.15.3
