--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ google-cloud-datastore>=1.9.0
 google-cloud-vision>=0.38.0
 inflect>=2.1.0
 logbook>=1.4.3
+moviepy>=1.0.0
 python-dotenv>=0.10.3
 python-telegram-bot==12.0.0b1
 requests>=2.22.0
