--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ inflect>=2.1.0
 logbook>=1.4.3
 moviepy>=1.0.0
 python-dotenv>=0.10.3
-python-telegram-bot==12.0.0b1
+python-telegram-bot>=12.1.1
 requests>=2.22.0
 slackclient>=2.0.1
 textblob>=0.15.3
